Autoselect-in-list for Vertex Group selection doesn't work. #35178

Closed
opened 2013-05-02 04:21:34 +02:00 by Mario Mey · 3 comments

%%%Ubuntu 12.04, ATI
2.66 stable

In Properties, Object Data, Shape Keys, there're two boxes: for selecting Vertex Weight Group (to blend to basis shape) and a Shape Key (to be used as a relative key). Now:

If I click in Shape Key and start writing the name of a shape key, the list is shorten to the letters I write (eg: "Bas"). If I press Enter, the first is selected ("Basis").
If I click in Vertex Weight Group, and write three letters "Gro", the list is shorten (as the other), but, when pressing Enter, nothing is selected. I appear as a red box, with a non-existent Vertex Group: "Gro".

Also, if I change a Vertex Group name, this value doesn't change automatically. Shape Keys does.

- Steps ---

Open new scene
Click, in Properties, Object Data.
Create two Vertex Groups
Create two Shape Keys
Click, under "Blend:", the Shape Key. Write "Bas" and press Enter.
Click, under "Blend:", the Vertex Group. Write "Gro" and press Enter.

If you select a Vertex Group from the list and, then, change the name of the Vertex Group, this box appear as red.%%%

%%%Ubuntu 12.04, ATI 2.66 stable In Properties, Object Data, Shape Keys, there're two boxes: for selecting Vertex Weight Group (to blend to basis shape) and a Shape Key (to be used as a relative key). Now: If I click in Shape Key and start writing the name of a shape key, the list is shorten to the letters I write (eg: "Bas"). If I press Enter, the first is selected ("Basis"). If I click in Vertex Weight Group, and write three letters "Gro", the list is shorten (as the other), but, when pressing Enter, nothing is selected. I appear as a red box, with a non-existent Vertex Group: "Gro". Also, if I change a Vertex Group name, this value doesn't change automatically. Shape Keys does. - Steps --- Open new scene Click, in Properties, Object Data. Create two Vertex Groups Create two Shape Keys Click, under "Blend:", the Shape Key. Write "Bas" and press Enter. Click, under "Blend:", the Vertex Group. Write "Gro" and press Enter. If you select a Vertex Group from the list and, then, change the name of the Vertex Group, this box appear as red.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r56465.%%%

%%%fixed r56465.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35178
No description provided.