fix [#35178] Autoselect-in-list for Vertex Group selection doesn't work. disallow assigning values that don't exist into a text field with a search-box.